--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@100;400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face {
+    font-family: 'Schabo';
+    src: url('../public/fonts/SCHABO-Condensed.otf') format('opentype');
+    ascent-override: 100%;
+}
