Segunda version. Secciones introduccion y contexto finalizadas. Inicio de metodologia. Todo es responsive

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,7 @@
     src: url('../public/fonts/SCHABO-Condensed.otf') format('opentype');
     ascent-override: 100%;
 }
+
+html {
+    scroll-behavior: smooth;
+}
